infrastructure/apiserver.yml
apiVersion: v1
kind: Service
metadata:
  name: apiserver
  namespace: infrastructure
  labels:
    name: apiserver
spec:
  ports:
    - port: 80
      name: service
  selector:
    name: apiserver
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
  namespace: infrastructure
  labels:
    name: apiserver
spec:
  selector:
    matchLabels:
      name: apiserver
  replicas: 1
  template:
    metadata:
      labels:
        name: apiserver
    spec:
      containers:
      - name: apiserver
        image: ezdeploy/apiserver:v0.4
        ports:
        - name: service
          containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 1024Mi
        volumeMounts:
        - name: apiserver-config
          mountPath: "/apiserver.conf.yaml"
          subPath: apiserver.conf.yaml
          readOnly: true
      volumes:
      - name: apiserver-config
        configMap:
          name: apiserver-configmap
          items:
          - key: apiserver.conf.yaml
            path: apiserver.conf.yaml
