infrastructure/authority.yml
apiVersion: v1
kind: Service
metadata:
  name: authority
  namespace: infrastructure
  labels:
    name: authority
spec:
  ports:
    - port: 80
      name: service
  selector:
    name: authority
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authority
  namespace: infrastructure
  labels:
    name: authority
spec:
  selector:
    matchLabels:
      name: authority
  replicas: 1
  template:
    metadata:
      labels:
        name: authority
    spec:
      containers:
      - name: authority
        image: ezdeploy/authority:v0.5 
        ports:
        - name: service
          containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
        volumeMounts:
        - name: authority-config
          mountPath: "/authorityCfg.yaml"
          subPath: authorityCfg.yaml
          readOnly: true
      volumes:
      - name: authority-config
        configMap:
          name: authority-configmap
          items:
          - key: authorityCfg.yaml
            path: authorityCfg.yaml
