infrastructure/cluster.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cluster
  namespace: infrastructure
  labels:
    name: cluster
spec:
  ports:
    - port: 80
      name: service
  selector:
    name: cluster
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster
  namespace: infrastructure
  labels:
    name: cluster
spec:
  selector:
    matchLabels:
      name: cluster
  replicas: 1
  template:
    metadata:
      labels:
        name: cluster
    spec:
      containers:
      - name: cluster
        image: ezdeploy/cluster:v0.3.3
        ports:
        - name: service
          containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
