infrastructure/kratos.yml
apiVersion: v1
kind: Service
metadata:
  name: kratos
  namespace: infrastructure
  labels:
    name: kratos
spec:
  ports:
    - port: 3306
  selector:
    name: kratos
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos
  namespace: infrastructure
  labels:
    name: kratos
spec:
  selector:
    matchLabels:
      name: kratos
  replicas: 3
  template:
    metadata:
      labels:
        name: kratos
    spec:
      containers:
      - name: kratos
        image: ezdeploy/kratos:v0.4
        ports:
        - name: public
          containerPort: 4433
        - name: admin
          containerPort: 4434
        resources:
          limits:
            cpu: 200m
            memory: 2048Mi
