infrastructure/ingress.yml
# ingress config for outside user visit.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: infrastructure-ingress
  namespace: infrastructure
spec:
  rules:
    - host: deploy.wangsaiyu.com
      http:
        paths:
          - backend:
              serviceName: apiserver
              servicePort: 80
